Added in homepage pagination.

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
 					About Me
 				</h2><img src="http://willvanwazer.com/wp-content/uploads/2011/04/biopic.png" alt="Me!">
 				<p style="color: black; font-size: small;">
-					I'm an aspiring developer, a student at the University of Virginia, principal of Everest Digital Media, and an intern <a href="http://www.abc7dc.com/" alt="ABC7">here</a> and <a href="http://www.thesabre.com" alt="The Sabre">here</a>.
+					I'm an aspiring developer, a student at the University of Virginia, principal of Everest Digital Media, and an intern <a href="http://www.washingtonpost.com/" alt="ABC7">here</a> and <a href="http://www.thesabre.com" alt="The Sabre">here</a>.
 				</p>
 			</div>
 		</li>
