Added Disqus commenting and some other things

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}WillVanWazer.com {% endblock %}
+{% block title %}Will Van Wazer | A Django Blog? Really?{% endblock %}
 
 {%block content %}	
 	{% for TumbleItem in tumble_item_list %}
