--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 				<h1 id="site-title"><span> 
 				<a href="http://willvanwazer.com/" title="Will Van Wazer" rel="home">Will Van Wazer</a> 
 				</span></h1> 
-				<div id="site-description">Just another&#8230;. Something.</div> 
+				<div id="site-description">A Django Blog? Really? Who would do that?</div> 
 			</div><!-- #branding --> 
 			<div id="access" role="navigation"> 
 <div class="skip-link screen-reader-text"><a href="#content" title="Skip to content">Skip to content</a></div> 
