--- a/templates/homepage_item_quote.html
+++ b/templates/homepage_item_quote.html
@@ -1,6 +1,6 @@
 <div class="quote">
 	{% load markup %}
-	<h3><a href="{{ object.get_absolute_url }}">{{ object.quote|markdown}}</a></h3>
+	<h2 class="entry-title"><a href="{{ object.get_absolute_url }}">{{ object.quote|markdown}}</a></h2>
 	<p>{{ object.source|markdown}}</p>
 	<div class="entry-meta"><h5>Posted on {{object.date}} by {{ object.author.first_name}}</h5></div>
 	
