Hacking away on templates.

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,7 @@
 <html>
 	<head>
 		<title>{% block title %}{% endblock %}</title>
-		<link rel="stylesheet" type="text/css" media="all" href="http://willvanwazer.com/wp-content/themes/twentyten/style.css" />
-		<link rel='index' title='Will Van Wazer' href='http://willvanwazer.com/' /> 
+		<link rel="stylesheet" type="text/css" media="all" href="http://www.willvanwazer.com/style.css" />
 	
 	
 	</head>
