--- a/templates/homepage_item_link.html
+++ b/templates/homepage_item_link.html
@@ -1,8 +1,9 @@
 <div class="link">
 	{% load markup %}
-	<span class="linkimg"></span>
-	<h2 class="entry-title"><a href="{{ object.get_absolute_url }}">{{ object.title|markdown}}</a></h2>
+	<h2 class="entry-title"><a href="{{ object.get_absolute_url }}">{{ object.title}}</a></h2>
 	<p>{{ object.comment|markdown}}</p>
-	<h5>Posted on {{object.date}}</h5>	
-	
+	<img src="http://www.willvanwazer.com/link.png" class="linkimg">
+
+	<div class="item-meta">Posted on {{object.date}}</div>
 </div>
+<br>
