--- a/templates/homepage_item_post.html
+++ b/templates/homepage_item_post.html
@@ -1,13 +1,10 @@
 <div class="post">
 	<h2 class="entry-title"><a href="{{ object.get_absolute_url }}">{{ object.title}}</a></h2>
-	<div class="entry-meta">
-		<span class="meta-prep meta-prep-author">Posted on</span> 
-		<span class="entry-date">{{object.date}}</span>
-		<span class="meta-sep">by</span> 
-		<span class="author vcard">{{ object.author.first_name}}</span>	
-	</div>
+	<div class="entry-meta">Posted on {{object.date}} by {{ object.author.first_name}}</div>
 	{% load markup %}
 	<div class="entry-content">
 	{{ object.post|markdown}}
 	</div>
 </div>
+
+<div class="content-line"></div>
