--- a/templates/soko/base.html
+++ b/templates/soko/base.html
@@ -32,34 +32,31 @@
 			<div id="sidebar">
 			
 				<h1>Will Van Wazer</h1>
-				<p class="tagline">What exactly is a developer-journalist, anyway?</p>
+				<br>
+				<h2>Web Developer</h2>
 				
-					<ul id="nav">	
+				<ul id="nav">	
 						
-					<li><a href="/" title="Home">Home</a><span>/</span></li>
+					<li class="current"><a href="/" title="Home">Home</a><span>/</span></li>
 					{% for page in pages %}
-					<li><a href="{{ page.get_absolute_url }}" title="{{ page.title }}">{{ page.title }}</a><span>/</span></li>						
+					<li><a href="{{ page.get_absolute_url }}" title="{{ page.title }}">{{ page.title }}<span>/</span></li>						
 					{% endfor %}					
 								
 				</ul><!--end nav-->
 				
 				<div id="bio">
-
-					<h3>About Me</h3>	
-					<img class="author-img" src="http://willvanwazer.com/wp-content/uploads/2011/04/biopic.png" alt="Me!" />				
+								
+					<!-- ADD A PHOTO OF YOURSELF HERE - YOU CAN USE ANY SIZE YOU LIKE, ALTHOUGH THE RECOMMENDED DIMENSIONS ARE 140x150px -->
+					<img class="author-img" src="http://willvanwazer.com/wp-content/uploads/2011/04/biopic.png" alt="Me!" />	
+					
+					<h3>About Me</h3>					
 					<p>I'm a fourth year at UVa, a former developer-journalist intern at the Washington Post, and a Django and Python developer.</p>		
 						
 				</div><!--end bio-->
 				
 				<div class="sidebar-line"></div>
 
-				 <a href="http://www.twitter.com/willvanwazer"><img src="/static/images/icons/twitter_32.png" alt="Twitter"></a> 
-				 <a href="#"><img src="/static/images/icons/github_32.png" alt="Github"></a>
-				 <a href="#"><img src="/static/images/icons/email_32.png" alt="Email"></a>
-
-			{% comment %}
-				
-			
+				<a href="http://www.twitter.com/willvanwazer"><img src="http://twitter-badges.s3.amazonaws.com/follow_me-a.png" alt="Follow willvanwazer on Twitter"></a>
 				
 				<div id="freelance-services">			
 					
@@ -72,7 +69,7 @@
 				</div><!--end freelance-services-->
 				
 				<div class="sidebar-line"></div>			
-		
+			{% comment %}
 				<div id="testimonials">
 				
 					<h3>Client Testimonial</h3>
@@ -91,7 +88,8 @@
 			{% endcomment %}	
 				<div id="footer">		
 					
-					<p>Copyright &copy; 2011 / Will Van Wazer</p>						
+					<p>Copyright &copy; 2011 / [ADD YOUR NAME HERE] / All Rights Reserved</p>	
+						
 				</div><!--end footer-->	
 			
 			</div><!--end sidebar-->
