--- a/templates/base.html
+++ b/templates/base.html
@@ -42,9 +42,14 @@
 					{% endfor %}					
 								
 				</ul><!--end nav-->
+					<br>
+				{# <span style="margin-left: 80px;">	 #}
+				 <a href="http://www.twitter.com/willvanwazer"><img src="/static/images/icons/twitter_32.png" alt="Twitter"></a> 
+				 <a href="http://www.github.com/willvanwazer"><img src="/static/images/icons/github_32.png" alt="Github"></a>
+				 <a href="mailto:will@willvanwazer.com"><img src="/static/images/icons/email_32.png" alt="Email"></a>
+				{# </span> #}
 				
 				<div id="bio">
-
 					<h3>About Me</h3>	
 					<img class="author-img" src="http://willvanwazer.com/wp-content/uploads/2011/04/biopic.png" alt="Me!" />				
 					<p>I'm a fourth year at UVa, a former developer-journalist intern at the Washington Post, and a Django and Python developer.</p>		
@@ -53,9 +58,7 @@
 				
 				<div class="sidebar-line"></div>
 
-				 <a href="http://www.twitter.com/willvanwazer"><img src="/static/images/icons/twitter_32.png" alt="Twitter"></a> 
-				 <a href="#"><img src="/static/images/icons/github_32.png" alt="Github"></a>
-				 <a href="#"><img src="/static/images/icons/email_32.png" alt="Email"></a>
+
 
 			{% comment %}
 				
