--- a/templates/homepage_item_tweet.html
+++ b/templates/homepage_item_tweet.html
@@ -3,7 +3,6 @@
 	<h2><a href="{{ object.get_absolute_url }}">{{ object.text|markdown}}</a></h2>
 	
 	<div class="item-meta">Posted on {{object.pub_time}} </div>
-	
-	{# Include this later: by {{ object.author.first_name}} #}
 </div>
-<br>
+
+<div class="content-line"></div>
