--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,7 @@
 								
 				</ul><!--end nav-->
 					<br>
+				
 				{# <span style="margin-left: 80px;">	 #}
 				 <a href="http://www.twitter.com/willvanwazer"><img src="/static/images/icons/twitter_32.png" alt="Twitter"></a> 
 				 <a href="http://www.github.com/willvanwazer"><img src="/static/images/icons/github_32.png" alt="Github"></a>
@@ -56,8 +57,7 @@
 						
 				</div><!--end bio-->
 				
-				<div class="sidebar-line"></div>
-
+{# <a href="http://djangoproject.com/" class="ponybadge" title="Magic! Ponies! Django! Whee!"><img src="http://media.djangopony.com/img/small/badge.png" width="210" height="65" alt="pony powered"></a>				 #}
 
 
 			{% comment %}
