Server changes. I should stop doing that.

--- a/templates/page_single.html
+++ b/templates/page_single.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ page.title }} | Will Van Wazer{% endblock %}
+{% block title %}{{ post.title }} | Will Van Wazer{% endblock %}
 
 {%block content %}
 <div class="post">
